<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="new_task">New Task</string>
    <string name="name">Name</string>
    <string name="oops">Oops</string>
    <string name="project">Project</string>
    <string name="priority">Priority</string>
    <string name="repeat">Repeat</string>
    <string name="no">No</string>
    <string name="every_day">Every day</string>
    <string name="once">Once</string>
    <string name="on_weekdays">On weekdays</string>
    <string name="on_weekends">On weekends</string>
    <string name="select_days">Select days</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="ok">Ok</string>
    <string name="add_new_task">Add new task</string>
    <string name="title_today">Today</string>
    <string name="today">Today</string>
    <string name="task_manager_example">Task Manager</string>
    <string name="_07_jan_23_project_example">07 Jan 23 / Project</string>
</resources>