<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:theme="@style/Theme.Todo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_task_layout_constraint_top"
        android:layout_marginHorizontal="@dimen/add_task_layout_constraint_horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/add_task_layout_back_size"
            android:layout_height="@dimen/add_task_layout_back_size"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_task_layout_title_start"
            android:text="@string/new_task"
            style="@style/Headline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_layout_name_top"
            android:text="@string/name"
            style="@style/Headline4"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_layout_input_name_top"
            android:paddingVertical="@dimen/add_task_layout_input_name_vertical"
            android:paddingHorizontal="@dimen/add_task_layout_input_name_horizontal"
            android:background="@drawable/rounded_input_background"
            android:textCursorDrawable="@drawable/input_cursor"
            android:hint="@string/oops"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:imeOptions="actionDone"
            android:autofillHints=""
            style="@style/Body2"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_layout_project_top"
            android:text="@string/project"
            style="@style/Headline4"
            app:layout_constraintTop_toBottomOf="@id/input_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/selectedProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_layout_project_top"
            style="@style/Body1"
            app:layout_constraintTop_toBottomOf="@id/input_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="No project" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="project, selectedProject" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_layout_priority_top"
            android:text="@string/priority"
            style="@style/Headline4"
            app:layout_constraintTop_toBottomOf="@id/project"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectedPriority"
            android:layout_width="@dimen/add_task_layout_selected_priority_size"
            android:layout_height="@dimen/add_task_layout_selected_priority_size"
            android:layout_marginTop="@dimen/add_task_layout_selected_priority_top"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            app:cornerRadius="20dp"
            app:rippleColor="@null"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@id/project"
            app:layout_constraintEnd_toEndOf="parent"
            tools:backgroundTint="@color/light_grey"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="priority, selectedPriority" />

        <TextView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_layout_repeat_top"
            android:text="@string/repeat"
            style="@style/Headline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority" />

        <TextView
            android:id="@+id/selectedRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_layout_repeat_top"
            style="@style/Body1"
            app:layout_constraintTop_toBottomOf="@id/priority"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="No"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="repeat, selectedRepeat" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTask"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/add_task_layout_add_task_top"
            android:layout_marginBottom="@dimen/add_task_layout_add_task_bottom"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/add_new_task"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:letterSpacing="0"
            style="@style/Body1"
            app:cornerRadius="20dp"
            app:backgroundTint="@color/black"
            app:rippleColor="@color/ripple_black"
            app:layout_constraintTop_toBottomOf="@id/repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>